--- a/JavaScript-Practica#1/index.html
+++ b/JavaScript-Practica#1/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS + Firebase</title>
+    <title>Practica#1</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Alumnos<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Empleados<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./consulta.html">Consulta</a>
@@ -41,7 +41,7 @@
         <div class="row">
 
             <div class="col-md-4">
-                <h3 style="text-align:center">Alta de Alumnos</h3>
+                <h3 style="text-align:center">Registro de Empleados</h3>
 
                 <form action="#">
                     <div class="form-group ">
@@ -50,19 +50,37 @@
                     </div>
                     <div class="form-group">
                         <label for="Input2">Nombre</label>
-                        <input type="text" class="form-control" id="Input2" placeholder="Nombre">
+                        <input type="text" class="form-control" id="Input2" placeholder="Nombres">
                     </div>
                     <div class="form-group">
-                        <label for="Input3">Correo electrónico</label>
-                        <input type="email" class="form-control" id="Input3" aria-describedby="emailHelp" placeholder="Enter email">
+                        <label for="Input3">Apellidos</label>
+                        <input type="text" class="form-control" id="Input3" aria-describedby="emailHelp" placeholder="Apellidos">
                     </div>
                     <div class="form-group ">
-                        <label for="Input4">Carrera</label>
+                        <label for="Input4">Departamento</label>
                         <select class="form-control " id="Input4">
-                            <option value="selecciona">selecciona</option>
-                            <option value="Informatica">Informatica</option>
-                            <option value="Sistemas">Sistemas</option>
-                            <option value="TICS">TICS</option>
+                            <option value="selecciona">Selecciona</option>
+                            <option value="Gerente">Gerente</option>
+                            <option value="Contador">Contador</option>
+                            <option value="Marketing">Marketing</option>
+                            <option value="Logistica">Logistica</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="Input3">Telefono</label>
+                        <input type="text" class="form-control" id="Input5" aria-describedby="emailHelp" placeholder="Telefono">
+                    </div>
+                    <div class="form-group">
+                        <label for="Input3">RFC</label>
+                        <input type="text" class="form-control" id="Input6" aria-describedby="emailHelp" placeholder="RFC">
+                    </div>
+                    <div class="form-group ">
+                        <label for="Input7">Sueldo</label>
+                        <select class="form-control " id="Input7">
+                            <option value="seleccionar">Selecciona</option>
+                            <option value="4200">$4200</option>
+                            <option value="3600">$3600</option>
+                            <option value="3000">$3000</option>
                         </select>
                     </div>
                     <button type="submit " class="btn btn-primary" onclick="createR()">Enviar</button>
@@ -73,15 +91,18 @@
 
             </div>
             <div class="col-md-8">
-                <h3 style="text-align:center">Lista de Alumnos</h3>
+                <h3 style="text-align:center">Lista de Empleados</h3>
 
                 <table class="table table-hover">
                     <thead>
                       <tr>
-                        <th scope="col">Matrícula</th>
+                        <th scope="col">Codigo Empleado</th>
                         <th scope="col">Nombre</th>
-                        <th scope="col">Correo</th>
-                        <th scope="col">Carrera</th>
+                        <th scope="col">Apellidos</th>
+                        <th scope="col">Departamento</th>
+                        <th scope="col">Telefono</th>
+                        <th scope="col">RFC</th>
+                        <th scope="col">Sueldo</th>
                         <th scope="col"></th>
                         <th scope="col"></th>
                       </tr>
