--- a/JavaScript-Practica#1/index.html
+++ b/JavaScript-Practica#1/index.html
@@ -18,9 +18,9 @@
     <script src="index.js"></script>
 </head>
 
-<body onload="read()"> 
+<body onload="read()" class="opacity-50" background="https://www.hola.com/imagenes/viajes/20180530124901/naturaleza-destinos-mundo-a-todo-color/0-571-947/colores-m.jpg"> 
     <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">JS + Firebase</a>
+        <a class="navbar-brand" href="#">Negocios JS</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,16 +37,16 @@
         </div>
     </nav>
 
-    <div class="container p-3 my-3">
+    <div class="container p-2 my-2">
         <div class="row">
 
-            <div class="col-md-4">
-                <h3 style="text-align:center">Registro de Empleados</h3>
+            <div class="col-mb-3  text-white">
+                <h3 style="text-align:start">Registro de Empleados</h3>
 
                 <form action="#">
                     <div class="form-group ">
-                        <label for="Input1">Matrícula</label>
-                        <input type="text " class="form-control " id="Input1" placeholder="Num. de control">
+                        <label for="Input1">Codigo de Empleado</label>
+                        <input type="text " class="form-control " id="Input1" placeholder="Codigo">
                     </div>
                     <div class="form-group">
                         <label for="Input2">Nombre</label>
