--- a/JavaScript-Practica#1/consulta.html
+++ b/JavaScript-Practica#1/consulta.html
@@ -38,7 +38,7 @@
     </nav>
 
     <div class="container p-3 my-3">
-        <div class="row">
+        <div class="row ">
             
             <div class="form-group">
                 <label for="Input8">Departamento</label>
@@ -50,7 +50,7 @@
                     <option value="Logistica">Logistica</option>
                 </select>
             </div>  
-            <div class="col-md-12">
+            <div class="col-md-12 text-white">
                 <h3 style="text-align:center">Empleados</h3>
 
                 <table class="table table-hover">
